# junta

./: .gitignore  .travis.yml  JuntaOrg.yml  LICENSE  Makefile  README.md  _config.yml  about.md  index.html  junta.cabal  junta.yml  test.sh
_includes/: footer.html
_layouts/: default.html
_posts/: 2014-06-25-welcome-to-jekyll.markdown  2014-06-26-first-post.markdown  2015-06-13-bootstrap.md
doc/: makefile
doc/src/: design.tex
doc/src/graph/: configuration.dot
doc/src/img/: configuration.dot
src/: Main.hs
src/Junta/: ConfigReader.hs  Juntafile.hs  Workflow.hs
src/Junta/App/Models/: Juntafile.hs
src/Junta/Workflow/: Phase.hs
src/app/: Main.hs
src/lib/: Junta.hs
src/lib/Junta/Workflow/: Phase.hs
src/main/haskell/: Build.hs  Main.hs
src/main/haskell/Junta/: Action.hs  BuildContext.hs  Core.hs  Juntafile.hs  Plugin.hs  Plugins.hs  ProjectConfiguration.hs  Workflow.hs
src/main/haskell/Junta/Juntafile/: Check.hs
src/main/haskell/Junta/Workflow/: Compile.hs  Fetch.hs  Install.hs  PreBuild.hs  Test.hs
src/test/haskell/: TestAll.hs
src/test/haskell/Junta/: ConfigReaderTest.hs  TestBuildConfiguration.hs
test/: TestAll.hs
test/Junta/: ConfigReaderTest.hs
